dist/1.0/bin/sample/retrieveUnpackaged/objects/Sales_Team_Commission__c.object
<CustomObject>
    <description>Object for Opportunity, when commissions from it should be divided between more, than one person.</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity</description>
        <inlineHelpText>Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Team Commissions</relationshipLabel>
        <relationshipName>Sales_Team_Commissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percentage_participation_in_Commission__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Percentage participation in Commission for this Salesman.</description>
        <inlineHelpText>Percentage participation in Commission for this Salesman.</inlineHelpText>
        <label>Percentage participation in Commission</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Salesman__c</fullName>
        <description>Salesman, that participate in this Opportunity.</description>
        <inlineHelpText>Salesman, that participate in this Opportunity.</inlineHelpText>
        <label>Salesman</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Team_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>Team Role of Salesman</description>
        <inlineHelpText>Team Role of Salesman</inlineHelpText>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Qualifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Voice Account Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sales Team Commission</label>
    <nameField>
        <label>Sales Team Commissions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Team Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>